<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1.0"
    android:orientation="vertical"
    android:padding="10.0dip" >

    <LinearLayout
        android:id="@+id/layout_hor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/help_icon"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="12.0dip"
            android:contentDescription="@string/hello"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/help_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/help_title"
                android:textColor="#ffffffff"
                android:textSize="15.0dip" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_about" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginBottom="10.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/black_white_gradient" />

    <TextView
        android:id="@+id/help_install"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_install"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/help_update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_update"
        android:textColor="@android:color/white" />

</LinearLayout>